--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -4,11 +4,366 @@
     <meta charset="UTF-8">
 
     <title>DOM learning</title>
+    <style>
+        .bg-black{
+            background: #212121;
+            color: #fff;
+        }
+    </style>
 </head>
-<body>
-    <div class="bg-black">
-        <h1 class="heading">DOM learning in process</h1>
+<body class="bg-black">
+    <div>
+        <h1 id="title" class="heading">DOM learning in Process <span style="display:none;">test text</span></h1>
+        <h2>Lorem1 ipsum dolor sit amet.</h2>
+        <h2>Lorem2 ipsum dolor sit amet.</h2>
+        <h2>Lorem3 ipsum dolor sit amet.</h2>
         <p>Lorem ipsum dolor sit amet.</p>
+        <p id="greeting">Hello, World! <span id="imp" style="display:none;">We are writing Para</span></p>
+
+        <input type="password" name="" id="">
+        <ul>
+            <li class="list-item">one</li>
+            <li class="list-item">two</li>
+            <li class="list-item">three</li>
+            <li class="list-item">four</li>
+        </ul>
     </div>
 </body>
 </html>
+
+
+
+<!-- What is DOM ? -->
+ <!-- The DOM (Document Object Model) is like a map or a blueprint of a webpage. It represents the structure of a webpage in a way that your browser and JavaScript can understand. -->
+<!-- It helps us see and change the content and structure of a webpage in real time. -->
+
+<!-- The DOM is like the family tree of this webpage, where:
+Each element (like a heading, paragraph, or button) is a node in the tree.
+These nodes are connected in a parent-child relationship. -->
+
+
+    <!-- Example of DOM : An Online Shopping Website-->
+
+<!-- Scenario: Updating the Shopping Cart on a Website
+ 
+1. You Visit an Online Store:
+- The webpage shows a list of products (e.g., a phone, a laptop, and headphones).
+- Each product has a name, image, price, and an "Add to Cart" button.
+
+-- HTML Example:
+
+<h1>Products</h1>
+<div class="product">
+    <p>Phone</p>
+    <button>Add to Cart</button>
+</div>
+<div class="product">
+    <p>Laptop</p>
+    <button>Add to Cart</button>
+</div>
+
+In the DOM, this webpage is represented as a tree structure, like this:
+
+HTML
+├── BODY
+     ├── H1 (Products)
+     └── DIV (Product 1: Phone)
+          ├── P (Phone)
+          └── BUTTON (Add to Cart)
+
+2. You Click "Add to Cart":
+- When you click the button next to "Phone," the website dynamically updates the cart to show "1 item added."
+
+What happens behind the scenes:
+- The browser uses the DOM to detect the button click.
+- JavaScript updates the DOM to change the cart count.
+
+JavaScript Example:
+document.querySelector(".cart-count").textContent = "1 item added";
+
+3. DOM Updates the Page Without Reloading:
+- The text "Cart: 0 items" changes instantly to "Cart: 1 item added" because the DOM updates the visible content.
+
+This dynamic change is made possible by:
+- Accessing the DOM (finding the "cart" part of the page).
+- Modifying the DOM (changing the cart text).-->
+
+
+
+<!-- Why is DOM required?
+Dynamic Content Updates: Without reloading the page, the DOM allows content updates (e.g., form validation, AJAX responses). 
+
+User Interaction: It makes your webpage interactive (e.g., responding to button clicks, form submissions). 
+
+Flexibility: Developers can add, modify, or remove elements and styles in real-time. -->
+
+
+
+
+<!-- 
+document.getElementById('title')
+
+<h1 id=​"title" class=​"heading">​DOM learning in Process​</h1>​
+
+document.getElementById('title').id
+'title'
+
+document.getElementById('title').className
+'heading' 
+
+document.getElementById('title').getAttribute('id')
+'title'
+
+document.getElementById('title').getAttribute('class')
+'heading'
+
+document.getElementById('title').setAttribute('class', 'test heading')
+undefined
+-->
+
+<!-- Store in a Variable for Easy Access
+
+const title = document.getElementById('title')
+
+title
+Returns:- <h1 id="title" class="heading">DOM learning in Process</h1>
+-->
+
+<!-- 
+title.style.backgroundColor = 'yellow'
+'yellow'
+
+title.style.padding = "15px"
+'15px'
+
+title.style.borderRadius = "15px"
+'15px'
+ -->
+
+<!-- *********************************************** -->
+
+ <!-- To get the content 
+  title.innertext
+  Returns:- 'DOM learning in Process'
+ -->
+
+  <!-- To get the content 
+  title.textContent
+  Returns:- 'DOM learning in Process test text'
+ -->
+
+  <!-- To get the content 
+  title.innerHTML
+  Returns:- DOM learning in Process <span style="display:none;">test text</span>
+ -->
+
+ <!-- ********************************************* -->
+
+ <!-- innerText:- This property focuses on the rendered text content. 
+  
+ innerText returns the text as it appears on screen. It ignores HTML tags. And it also does not include text that is hidden with CSS styles. -->
+
+
+ <!-- textContent:- This property is also focuses on the rendered text content.
+  
+ textContent will show all the texts even if it's hidden due to any CSS property being applied to the text.-->
+
+ <!-- innerHTML:- innerHTML is used to get or set the HTML content of an element as a string. innerHTML Can Contain HTML Tags: It doesn’t just handle plain text; it can also handle HTML markup.
+  
+using .innerHTML you can get/retrieve the content inside an HTML element.
+ans also using .innerHTML you can change or update the content of an HTML element. -->
+
+ <!-- ********************************************* -->
+
+ <!-- document.querySelector('h2')
+  <h2>Lorem1 ipsum dolor sit amet.</h2>
+   -->
+
+<!-- document.querySelector('#title')
+<h1 id=​"title" class=​"heading">​…​</h1>​ -->
+
+<!-- document.querySelector('.heading')
+<h1 id=​"title" class=​"heading">​…​</h1>​ -->
+
+<!-- document.querySelector('input[type="password"]') -->
+
+<!-- <input type=​"password" name id>​
+document.querySelector('p:first-child')
+null -->
+
+<!-- ***************************************************************************-->
+
+<!-- document.querySelector() method returns the first matching element.
+   
+Why Use document.querySelector()?
+It's select elements with CSS selectors (e.g., by tagName, class, id, attributes, etc.).
+It’s more versatile than getElementById() or getElementsByClassName(). 
+
+If no element matches the selector, document.querySelector() returns null. -->
+
+
+<!-- querySelectorAll() returns all matching elements as a NodeList. 
+ 
+Why Use document.querySelectorAll()?
+To select multiple elements that share a common property (like class, tag, or attribute).
+To loop through and manipulate multiple elements at once.-->
+
+
+<!-- **************************************************************************** -->
+
+<!-- querySelector() -->
+
+<!--
+Selecting by Tag Name:
+
+let paragraph = document.querySelector("p");
+console.log(paragraph); // Returns the first <p> element
+
+
+Selecting by Class:
+
+let box = document.querySelector(".box");
+console.log(box); // Returns the first element with class "box"
+
+
+Selecting by ID:
+
+let title = document.querySelector("#title");
+console.log(title); // Returns the element with ID "title"
+
+
+Selecting by Attribute:
+
+let input = document.querySelector("[type='text']");
+console.log(input); // Returns the first <input> element with type="text"
+
+
+Using Complex Selectors:
+
+let nested = document.querySelector(".container .item");
+console.log(nested); // Returns the first element with class "item" inside an element with class "container" 
+-->
+
+
+
+<!-- ******************************************************************************* -->
+
+<!-- querySelectorAll() -->
+<!-- 
+Selecting by Tag Name:
+
+let paragraphs = document.querySelectorAll("p");
+console.log(paragraphs); // Returns all <p> elements on the page
+
+Selecting by Class:
+
+let boxes = document.querySelectorAll(".box");
+console.log(boxes); // Returns all elements with class "box"
+
+Selecting by ID (Less Common for querySelectorAll):
+
+let titles = document.querySelectorAll("#title");
+console.log(titles); // Returns all elements with ID "title" (should ideally be one)
+
+Selecting by Attribute:
+
+let inputs = document.querySelectorAll("[type='text']");
+console.log(inputs); // Returns all <input> elements with type="text"
+
+Combining Selectors:
+
+let items = document.querySelectorAll(".container .item");
+console.log(items); // Returns all elements with class "item" inside elements with class "container" 
+-->
+
+<!-- *************************************************************************************** -->
+
+<!-- document.querySelector('ul')
+<ul>​…​</ul>​ -->
+
+<!-- const myul=document.querySelector('ul')
+undefined -->
+
+<!-- myul.querySelector('li')
+<li>​…​</li>​ -->
+
+<!-- const turnGreen = myul.querySelector('li')
+undefined -->
+
+<!-- turnGreen.style.backgroundColor="green"
+'green' -->
+
+<!-- turnGreen.style.padding="20px"
+'20px' -->
+
+<!-- turnGreen.innerText
+'one' -->
+
+<!-- turnGreen.innerText='five'
+'five' -->
+
+<!-- ************************************************** -->
+
+<!-- document.querySelectorAll('h2') -->
+
+<!-- document.querySelectorAll('li')
+NodeList(3) [li, li, li] -->
+
+<!-- const tempLiList=document.querySelectorAll('li')
+undefined -->
+
+<!-- tempLiList[0].style.color='green'
+'green' -->
+
+<!-- const myH1=document.querySelectorAll('h1')
+undefined -->
+
+<!-- myH1
+NodeList [h1#title.heading] -->
+
+<!-- myH1[0].style.color='pink'
+'pink' -->
+
+<!-- *******************************************-->
+
+<!-- Way to apply styling on All listItem through Function -->
+<!-- tempLiList.forEach(function(li) {
+    li.style.backgroundColor='yellow'
+}) -->
+
+<!-- ************************
+  -->
+
+
+  <!-- To convert HTMLCollection into Array -->
+<!-- Array.from(tempItem)
+(4) [li.list-item, li.list-item, li.list-item, li.list-item] -->
+
+<!-- const myConvertedArray=Array.from(tempItem)
+undefined -->
+
+<!-- myConvertedArray
+(4) [li.list-item, li.list-item, li.list-item, li.list-item] -->
+
+<!-- myConvertedArray.forEach(function(li){
+    li.style.color='orange'
+}) -->
+<!-- Returns:- all <li> color is change into orange -->
+
+<!-- ************************************** -->
+
+
+<!-- Extra Practice -->
+
+<!-- document.querySelectorAll('.mw-headline')
+NodeList []length: 0[[Prototype]]: NodeList -->
+
+<!-- const myH2=document.querySelectorAll('.mw-headline')
+undefined -->
+
+<!-- myH2.forEach(function(h){
+    h.style.color='red';
+    h.style.backgroundColor='yellow';
+    h.style.padding='10px';
+    h.innerText='Veeresh'
+})  It will change the style of the element-->
